# cvgenai

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  Pipfile  README.md  SECURITY.md  app_config.toml  config-sample.toml  example_job.txt  generate_cover_letter.py  generate_resume.py  pyproject.toml  resume-sample.toml  resume.bat  resume.sh  run.py  run.sh  setup.py  test.sh
.github/scripts/: check_tag_exists.py  get_version.py
.github/workflows/: ci.yml  release.yml  run-tests.yml
cvgenai/: __init__.py  cli.py  factory.py  run.py
cvgenai/config/: __init__.py  toml.py
cvgenai/core/: __init__.py  document.py
cvgenai/resume/: __init__.py  generate.py
cvgenai/services/: file_service.py  html_service.py  pdf_service.py
cvgenai/templating/: renderer.py
images/logo/: logo.ai
src/cvgenai/: __init__.py  career.py  cli.py  config.py  controller.py  document.py  factory.py  generate.py
src/cvgenai/config/: __init__.py  toml.py
src/cvgenai/core/: document.py
src/cvgenai/resume/: generate.py
src/cvgenai/services/: __init__.py  customizer_service.py  file_service.py  html_service.py
src/cvgenai/templating/: __init__.py  renderer.py
src/resume/: generate.py
templates/: cover_letter_template.html  resume_page1_template.html  resume_page2_template.html  style.css
tests/cvgenai/: test_career.py  test_cli.py  test_controller.py  test_document.py  test_factory.py  test_generate.py  test_toml.py
tests/cvgenai/config/: test_toml.py
tests/cvgenai/core/: test_document.py
tests/cvgenai/resume/: test_generate.py
(+5 files in other folders)
